--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
+    <script src="scenes/scene1.js"></script>
 </head>
 <body>
 
-    <script src="index.js"></script>
+    <script type="module" src="config.js"></script>
 
 
 </body>
