--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="scenes/scene1.js"></script>
 </head>
 <body>
+    <div id = "game"></div>
+
 
     <script type="module" src="config.js"></script>
-
-
 </body>
 </html>
