--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
-    <script src="scenes/scene1.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
+    <script src="Main.js"></script>
 </head>
 <body>
     <div id = "game"></div>
