--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
-    <script src="Main.js"></script>
 </head>
 <body>
     <div id = "game"></div>
 
-
+    <script type="module" src="Main.js"></script>
     <script type="module" src="config.js"></script>
 </body>
 </html>
