--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
     <div id = "game"></div>
